@@ -2,6 +2,7 @@ v1.0.4 -
 Additions:
 * The error dialog now automatically gets dismissed the next time ImGui is opened
 * Imgui.IsVisible()
+* Added function overload for Isaac.GetLocalizedString(), which accepts LanguageCode string as paramater
 /newline/
 Fixes:
 * Fixed Eden's damage, range, and shot speed stats not properly changing
